terraform/aws/modules/alb/alb_target_group.tf
resource "aws_lb_target_group" "eks_tg" {
  name     = "eks-target-group"
  port     = 80
  protocol = "HTTP"
  vpc_id   = var.vpc_id
}
